istio/sa-logic-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend-service
  http:
  - route:
    - destination:
        host: frontend-service
        subset: v1
      weight: 100
